--- a/accounts/build.gradle
+++ b/accounts/build.gradle
@@ -10,6 +10,10 @@ repositories {
     jcenter()
 }
 
+test {
+    maxParallelForks = 8
+}
+
 dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.8'
     implementation 'org.projectlombok:lombok:1.18.8'
