--- a/accounts/build.gradle
+++ b/accounts/build.gradle
@@ -1,6 +1,20 @@
+buildscript {
+    ext {
+        grpcVersion = '1.21.0'
+    }
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.10'
+    }
+}
+
 plugins {
     id 'java'
     id 'application'
+    id 'com.google.protobuf' version '0.8.10'
+    id 'idea'
 }
 
 sourceCompatibility = 11
@@ -14,12 +28,29 @@ test {
     maxParallelForks = 8
 }
 
+protobuf {
+    protoc {
+        artifact = "com.google.protobuf:protoc:3.9.0"
+    }
+    plugins {
+        grpc {
+            artifact = "io.grpc:protoc-gen-grpc-java:${grpcVersion}"
+        }
+    }
+    generateProtoTasks {
+        all()*.plugins {
+            grpc {}
+        }
+    }
+}
+
 dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.8'
     implementation 'org.projectlombok:lombok:1.18.8'
 
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.8'
-
+    implementation 'com.google.protobuf:protobuf-java:3.9.0'
+    
     implementation 'org.flywaydb:flyway-core:5.2.4'
 
     implementation 'mysql:mysql-connector-java:8.0.16'
@@ -43,5 +74,5 @@ jar {
 }
 
 wrapper {
-    gradleVersion = '5.5'
+    gradleVersion = '5.5.1'
 }
