--- a/accounts/build.gradle
+++ b/accounts/build.gradle
@@ -11,6 +11,7 @@ repositories {
 }
 
 test {
+    useJUnitPlatform()
     maxParallelForks = 8
 }
 
@@ -25,15 +26,19 @@ dependencies {
     implementation 'mysql:mysql-connector-java:8.0.16'
 
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.8'
-    testImplementation 'junit:junit:4.12'
     testImplementation 'org.assertj:assertj-core:3.11.1'
-    testImplementation 'com.tngtech.archunit:archunit-junit4:0.10.2'
     testImplementation 'org.slf4j:slf4j-simple:1.7.26'
     testImplementation 'org.reflections:reflections:0.9.11'
 
     testImplementation 'com.h2database:h2:1.4.199'
 
-    testImplementation "org.testcontainers:mysql:1.11.4"
+    testImplementation 'org.testcontainers:mysql:1.11.4'
+
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
+
+    testImplementation 'com.tngtech.archunit:archunit-junit5-api:0.10.2'
+    testRuntimeOnly 'com.tngtech.archunit:archunit-junit5-engine:0.10.2'
 }
 
 mainClassName = 'lt.rieske.accounts.App'
