--- a/accounts/build.gradle
+++ b/accounts/build.gradle
@@ -28,6 +28,8 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.8'
     implementation 'org.projectlombok:lombok:1.18.8'
 
+    implementation 'com.sparkjava:spark-core:2.9.1'
+
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.8'
     
     implementation 'org.flywaydb:flyway-core:5.2.4'
@@ -36,6 +38,7 @@ dependencies {
 
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.8'
     testImplementation 'org.assertj:assertj-core:3.11.1'
+    testImplementation 'io.rest-assured:rest-assured:4.0.0'
     testImplementation 'org.slf4j:slf4j-simple:1.7.26'
     testImplementation 'org.reflections:reflections:0.9.11'
 
