--- a/accounts/build.gradle
+++ b/accounts/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 
     implementation 'ch.qos.logback:logback-classic:1.2.3'
 
+    implementation 'net.jodah:failsafe:2.1.0'
 
     implementation 'com.h2database:h2:1.4.199'
     implementation 'mysql:mysql-connector-java:8.0.16'
