--- a/accounts/docker-compose.yml
+++ b/accounts/docker-compose.yml
@@ -6,4 +6,24 @@ services:
   accounts:
     build: .
     ports:
-      - 8080
+      - 8080:8080
+    environment:
+      MYSQL_USER: test
+      MYSQL_PASSWORD: test
+      MYSQL_JDBC_URL: jdbc:mysql://database:3306/event_store
+
+  database:
+    image: mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: test
+      MYSQL_USER: test
+      MYSQL_PASSWORD: test
+      MYSQL_DATABASE: event_store
+    volumes:
+      - data:/var/lib/mysql
+
+volumes:
+  data:
+    driver_opts:
+      type: tmpfs
+      device: tmpfs
