End to end consistency test

--- a/accounts/Dockerfile
+++ b/accounts/Dockerfile
@@ -2,7 +2,7 @@ FROM openjdk:11.0.3-jdk-stretch
 
 EXPOSE 8080
 
-ENV JAVA_OPTS --illegal-access=deny
+ENV JAVA_OPTS --illegal-access=deny -Xmx64m -Xms64m
 
 ENTRYPOINT /opt/service/accounts/bin/accounts
 
