--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    java
-    application
+    id "java"
+    id "application"
 }
 
 java {
@@ -12,9 +12,12 @@ repositories {
     mavenCentral()
 }
 
+task integrationTest(type: Test)
+task e2eTest(type: Test)
+
 tasks {
     wrapper {
-        gradleVersion = "5.6.3"
+        gradleVersion = "5.6.4"
     }
 
     test {
@@ -25,7 +28,7 @@ tasks {
         maxParallelForks = 8
     }
 
-    register<Test>("integrationTest") {
+    integrationTest {
         dependsOn(test)
         useJUnitPlatform {
             includeTags("integration")
@@ -33,7 +36,7 @@ tasks {
         maxParallelForks = 8
     }
 
-    register<Test>("e2eTest") {
+    e2eTest {
         dependsOn(test)
         dependsOn("integrationTest")
         dependsOn(assemble)
@@ -74,7 +77,7 @@ dependencies {
     testImplementation("org.reflections:reflections:0.9.11")
 
     testImplementation("org.testcontainers:mysql:1.12.2") {
-        exclude(group = "org.slf4j", module = "slf4j-api")
+        exclude(group: "org.slf4j", module: "slf4j-api")
     }
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.5.2")
@@ -82,7 +85,7 @@ dependencies {
 
     testImplementation("com.tngtech.archunit:archunit-junit5-api:0.11.0")
     testRuntimeOnly("com.tngtech.archunit:archunit-junit5-engine:0.11.0") {
-        exclude(group = "org.junit.platform", module = "junit-platform-engine")
+        exclude(group: "org.junit.platform", module: "junit-platform-engine")
     }
 }
 
