--- a/src/test/resources/prometheus/prometheus.yml
+++ b/src/test/resources/prometheus/prometheus.yml
@@ -3,7 +3,15 @@ scrape_configs:
     static_configs:
       - targets: ['127.0.0.1:9090']
 
-  - job_name: 'java-services'
+  - job_name: 'envoy'
+    metrics_path: '/stats'
+    params:
+      format: ['prometheus']
+    scrape_interval: 5s
+    static_configs:
+      - targets: ['lb-envoy:9901']
+
+  - job_name: 'account'
     metrics_path: '/prometheus'
     scrape_interval: 5s
     static_configs:
