--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,17 @@
 ---
-version: '3.7'
+version: '2.4'
 
 services:
 
-  #lb:
-  #  build: src/test/resources/load-balancer
-  #  depends_on:
-  #    - accounts-1
-  #    - accounts-2
-  #  ports:
-  #    - 8080:80
-
-  lb-envoy:
+  lb:
     build: src/test/resources/envoy
     depends_on:
-      - accounts-1
-      - accounts-2
+      - account
     ports:
-      - 9901
+      - 9901:9901
       - 8080:10000
 
-  accounts-1:
+  account:
     build: .
     ports:
       - 8080
@@ -28,15 +19,7 @@ services:
       MYSQL_USER: test
       MYSQL_PASSWORD: test
       MYSQL_JDBC_URL: jdbc:mysql://database:3306/event_store
-
-  accounts-2:
-    build: .
-    ports:
-      - 8080
-    environment:
-      MYSQL_USER: test
-      MYSQL_PASSWORD: test
-      MYSQL_JDBC_URL: jdbc:mysql://database:3306/event_store
+    scale: 2
 
   database:
     image: mysql:8.0.18
