--- a/src/test/resources/envoy/envoy.yaml
+++ b/src/test/resources/envoy/envoy.yaml
@@ -43,10 +43,5 @@ static_resources:
               - endpoint:
                   address:
                     socket_address:
-                      address: accounts-1
-                      port_value: 8080
-              - endpoint:
-                  address:
-                    socket_address:
-                      address: accounts-2
+                      address: account
                       port_value: 8080
