--- a/e2e-test.yml
+++ b/e2e-test.yml
@@ -10,6 +10,7 @@ services:
     ports:
       - 9901
       - 10000
+    mem_limit: 32M
 
   account:
     build: .
@@ -19,6 +20,7 @@ services:
       MYSQL_USER: test
       MYSQL_PASSWORD: test
       MYSQL_JDBC_URL: jdbc:mysql://database:3306/event_store
+    mem_limit: 128M
     scale: 2
 
   database:
@@ -30,6 +32,7 @@ services:
       MYSQL_DATABASE: event_store
     volumes:
       - data:/var/lib/mysql
+    mem_limit: 512M
 
 volumes:
   data:
