--- a/build.gradle
+++ b/build.gradle
@@ -38,13 +38,15 @@ tasks {
 
     e2eTest {
         dependsOn(test)
-        dependsOn("integrationTest")
+        dependsOn(integrationTest)
         dependsOn(assemble)
         useJUnitPlatform {
             includeTags("e2e")
         }
         maxParallelForks = 8
     }
+
+    check.dependsOn(e2eTest)
 }
 
 configurations.all {
