--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id "java"
-    id "application"
+    id 'org.beryx.runtime' version '1.8.0'
 }
 
 java {
@@ -39,7 +39,7 @@ tasks {
     e2eTest {
         dependsOn(test)
         dependsOn(integrationTest)
-        dependsOn(assemble)
+        dependsOn("runtime")
         useJUnitPlatform {
             includeTags("e2e")
         }
@@ -94,4 +94,14 @@ dependencies {
 
 application {
     mainClassName = "lt.rieske.accounts.App"
+}
+
+runtime {
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    modules = [
+            'java.sql',
+            'java.logging',
+            'java.naming',
+            'java.management']
+
 }
