--- a/build.gradle
+++ b/build.gradle
@@ -57,13 +57,11 @@ configurations.all {
 
 dependencies {
     annotationProcessor("org.projectlombok:lombok:1.18.10")
-    implementation("org.projectlombok:lombok:1.18.10")
+    compileOnly("org.projectlombok:lombok:1.18.10")
 
     implementation("com.sparkjava:spark-core:2.9.1")
 
     implementation("org.msgpack:msgpack-core:0.8.20")
-
-    implementation("com.fasterxml.jackson.core:jackson-databind:2.10.1")
 
     implementation("org.flywaydb:flyway-core:6.1.0")
 
@@ -75,6 +73,7 @@ dependencies {
     implementation("com.zaxxer:HikariCP:3.4.1")
 
     testAnnotationProcessor("org.projectlombok:lombok:1.18.10")
+    testCompileOnly("org.projectlombok:lombok:1.18.10")
     testImplementation("org.assertj:assertj-core:3.14.0")
     testImplementation("io.rest-assured:rest-assured:4.1.2")
     testImplementation("org.reflections:reflections:0.9.11")
