--- a/build.gradle
+++ b/build.gradle
@@ -59,7 +59,10 @@ dependencies {
     annotationProcessor("org.projectlombok:lombok:1.18.10")
     compileOnly("org.projectlombok:lombok:1.18.10")
 
-    implementation("com.sparkjava:spark-core:2.9.1")
+    implementation("com.sparkjava:spark-core:2.9.1") {
+        exclude(group: "org.eclipse.jetty.websocket", module: "websocket-server")
+        exclude(group: "org.eclipse.jetty.websocket", module: "websocket-servlet")
+    }
 
     implementation("org.msgpack:msgpack-core:0.8.20")
 
@@ -69,7 +72,9 @@ dependencies {
     implementation("io.micrometer:micrometer-registry-prometheus:1.3.1")
 
     implementation("com.h2database:h2:1.4.200")
-    implementation("mysql:mysql-connector-java:8.0.18")
+    implementation("mysql:mysql-connector-java:8.0.18") {
+        exclude(group: "com.google.protobuf", module: "protobuf-java")
+    }
     implementation("com.zaxxer:HikariCP:3.4.1")
 
     testAnnotationProcessor("org.projectlombok:lombok:1.18.10")
