--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     implementation("com.sparkjava:spark-core:2.9.1") {
         exclude(group: "org.eclipse.jetty.websocket", module: "websocket-server")
         exclude(group: "org.eclipse.jetty.websocket", module: "websocket-servlet")
+        exclude(group: "org.eclipse.jetty", module: "jetty-webapp")
     }
 
     implementation("org.msgpack:msgpack-core:0.8.20")
