--- a/build.gradle
+++ b/build.gradle
@@ -57,12 +57,15 @@ configurations.all {
 
 dependencies {
     annotationProcessor("org.projectlombok:lombok:1.18.10")
-    implementation("org.projectlombok:lombok:1.18.10")
+    compileOnly("org.projectlombok:lombok:1.18.10")
 
-    implementation("com.sparkjava:spark-core:2.9.1")
+    implementation("com.sparkjava:spark-core:2.9.1") {
+        exclude(group: "org.eclipse.jetty.websocket", module: "websocket-server")
+        exclude(group: "org.eclipse.jetty.websocket", module: "websocket-servlet")
+        exclude(group: "org.eclipse.jetty", module: "jetty-webapp")
+    }
 
     implementation("org.msgpack:msgpack-core:0.8.20")
-
     implementation("com.fasterxml.jackson.core:jackson-databind:2.10.1")
 
     implementation("org.flywaydb:flyway-core:6.1.0")
@@ -71,10 +74,13 @@ dependencies {
     implementation("io.micrometer:micrometer-registry-prometheus:1.3.1")
 
     implementation("com.h2database:h2:1.4.200")
-    implementation("mysql:mysql-connector-java:8.0.18")
+    implementation("mysql:mysql-connector-java:8.0.18") {
+        exclude(group: "com.google.protobuf", module: "protobuf-java")
+    }
     implementation("com.zaxxer:HikariCP:3.4.1")
 
     testAnnotationProcessor("org.projectlombok:lombok:1.18.10")
+    testCompileOnly("org.projectlombok:lombok:1.18.10")
     testImplementation("org.assertj:assertj-core:3.14.0")
     testImplementation("io.rest-assured:rest-assured:4.1.2")
     testImplementation("org.reflections:reflections:0.9.11")
