--- a/build.gradle
+++ b/build.gradle
@@ -80,6 +80,7 @@ dependencies {
     implementation("mysql:mysql-connector-java:8.0.18") {
         exclude(group: "com.google.protobuf", module: "protobuf-java")
     }
+    implementation("org.postgresql:postgresql:42.2.9")
     implementation("com.zaxxer:HikariCP:3.4.1")
 
     testAnnotationProcessor("org.projectlombok:lombok:1.18.10")
@@ -89,6 +90,9 @@ dependencies {
     testImplementation("org.reflections:reflections:0.9.11")
 
     testImplementation("org.testcontainers:mysql:1.12.4") {
+        exclude(group: "org.slf4j", module: "slf4j-api")
+    }
+    testImplementation("org.testcontainers:postgresql:1.12.4") {
         exclude(group: "org.slf4j", module: "slf4j-api")
     }
 
