--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
     - name: Set up JDK 14
       uses: actions/setup-java@v1
       with:
-        java-version: 14
+        java-version: 14.0.0-ea.36
     - name: Build
       run: ./gradlew build
     - name: Integration test
