Add preview flag to java exec task for stress tests

--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,9 @@ tasks.withType(JavaCompile) {
 tasks.withType(Test) {
     jvmArgs += "--enable-preview"
 }
+tasks.withType(JavaExec) {
+    jvmArgs += "--enable-preview"
+}
 
 configurations {
     all {
