--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,10 +12,7 @@ jobs:
     - name: Set up JDK 14
       uses: actions/setup-java@v1
       with:
-        java-version: 14.0.0-ea.36
+        java-version: 14.0.0
     - name: Build
       run: ./gradlew build
-    - name: Integration test
-      run: ./gradlew integrationTest
-    - name: End To End test
-      run: ./gradlew e2eTest
+
