--- a/build.gradle
+++ b/build.gradle
@@ -86,16 +86,16 @@ dependencies {
     testImplementation("io.rest-assured:rest-assured:4.3.0")
     testImplementation("org.reflections:reflections:0.9.12")
 
-    testImplementation("org.testcontainers:mysql:1.13.0") {
-        exclude(group: "org.slf4j", module: "slf4j-api")
-    }
-
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.6.1")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.6.1")
 
     testImplementation("com.tngtech.archunit:archunit-junit5-api:0.13.1")
     testRuntimeOnly("com.tngtech.archunit:archunit-junit5-engine:0.13.1") {
         exclude(group: "org.junit.platform", module: "junit-platform-engine")
+    }
+
+    integrationTestImplementation("org.testcontainers:mysql:1.13.0") {
+        exclude(group: "org.slf4j", module: "slf4j-api")
     }
 
     e2eTestImplementation("org.junit.jupiter:junit-jupiter-api:5.6.1")
