--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id "java"
     id "application"
+    id "jacoco"
 }
 
 java {
@@ -124,6 +125,7 @@ tasks.register('stressTest', JavaExec) {
     classpath = sourceSets.e2eTest.runtimeClasspath
     main = 'lt.rieske.accounts.StressTests'
 }
+
 tasks.register('asyncStressTest', JavaExec) {
     classpath = sourceSets.e2eTest.runtimeClasspath
     main = 'lt.rieske.accounts.AsyncStressTests'
