--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,7 @@ jobs:
       env:
         CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
       with:
+        coverageCommand: ./gradlew check
         coverageLocations:
           "${{github.workspace}}/build/jacoco/test.exec:jacoco"
           #- "${{github.workspace}}/build/jacoco/integrationTest.exec:jacoco"
