Try uploading code coverage reports

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,6 @@ jobs:
       with:
         coverageCommand: ./gradlew check
         coverageLocations:
-          "${{github.workspace}}/build/jacoco/test.exec:jacoco"
-          #- "${{github.workspace}}/build/jacoco/integrationTest.exec:jacoco"
-          #- "${{github.workspace}}/build/jacoco/e2eTest.exec:jacoco"
+          "${{github.workspace}}/build/reports/jacoco/test/jacocoTestReport.xml:jacoco"
+          #- "${{github.workspace}}/build/reports/jacoco/integrationTest/jacocoTestReport.xml:jacoco"
+          #- "${{github.workspace}}/build/reports/jacoco/e2eTest/jacocoTestReport.xml:jacoco"
