--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,12 +13,12 @@ jobs:
         java-version: 14.0.0
     - name: Build
       run: ./gradlew build --parallel --stacktrace
-    - name: Upload code coverate report
+    - name: Upload code coverage report to codeclimate
       uses: paambaati/codeclimate-action@v2.5.6
       env:
         CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
       with:
-        coverageCommand: ./gradlew check
+        coverageCommand: ./gradlew jacocoTestReport
         coverageLocations:
           "${{github.workspace}}/build/reports/jacoco/test/jacocoTestReport.xml:jacoco"
           #- "${{github.workspace}}/build/reports/jacoco/integrationTest/jacocoTestReport.xml:jacoco"
