--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,7 @@ jobs:
         CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
       with:
         coverageCommand: ./gradlew jacocoTestReport
+        prefix: "${{github.workspace}}/src/main/java"
         coverageLocations:
           "${{github.workspace}}/build/reports/jacoco/test/jacocoTestReport.xml:jacoco"
           #- "${{github.workspace}}/build/reports/jacoco/integrationTest/jacocoTestReport.xml:jacoco"
