--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,9 +17,9 @@ jobs:
       uses: paambaati/codeclimate-action@v2.5.6
       env:
         CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
+        JACOCO_SOURCE_PATH: src/main/java
       with:
         coverageCommand: ./gradlew jacocoTestReport
-        prefix: "${{github.workspace}}/src/main/java"
         coverageLocations:
           "${{github.workspace}}/build/reports/jacoco/test/jacocoTestReport.xml:jacoco"
           #- "${{github.workspace}}/build/reports/jacoco/integrationTest/jacocoTestReport.xml:jacoco"
