--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,8 +25,9 @@ jobs:
       uses: docker/build-push-action@v1
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        password: ${{ secrets.DOCKER_TOKEN }}
         repository: rieske/account
         tag_with_ref: true
         tag_with_sha: true
+        add_git_labels: true
         push: ${{ startsWith(github.ref, 'refs/tags/') || github.ref == 'master' }}
