--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,4 +30,4 @@ jobs:
         tag_with_ref: true
         tag_with_sha: true
         add_git_labels: true
-        push: ${{ startsWith(github.ref, 'refs/tags/') || github.ref == 'master' }}
+        push: ${{ startsWith(github.ref, 'refs/tags/') || github.ref == 'refs/heads/master' }}
