--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,11 @@ jobs:
       if: ${{ github.ref == 'refs/heads/master' }}
       run: |
         echo "::set-output name=version::$(infrastructure/next-version.sh)"
-        echo "::set-output name=changes::$(infrastructure/changes-since-last-release.sh)"
+        changes=$(infrastructure/changes-since-last-release.sh)
+        changes="${changes//'%'/'%25'}"
+        changes="${changes//$'\n'/'%0A'}"
+        changes="${changes//$'\r'/'%0D'}"
+        echo "::set-output name=changes::$changes"
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
